# routes/authRouter.js
@@ -2,6 +2,7 @@ import express from "express";
 import {
   registerUser,
   verifyUser,
+  resentEmailUser,
   loginUser,
   avatarUser,
   currentUser,
@@ -16,6 +17,7 @@ const authRouter = express.Router();
 
 authRouter.post("/register", validateBody(registerSchema), registerUser);
 authRouter.get("/verify/:verificationToken", verifyUser);
+authRouter.post("/verify", resentEmailUser);
 authRouter.post("/login", validateBody(loginSchema), loginUser);
 authRouter.patch(
   "/avatar",
